syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "niffler-currency.proto";

package guru.qa.grpc.niffler;

option java_multiple_files = true;
option java_package = "guru.qa.grpc.niffler.grpc";
option java_outer_classname = "NifflerSpendProto";

service NifflerSpendService {
  rpc GetSpends (SpendsRequest) returns (SpendsResponse) {}
  rpc GetStatistic (StatisticRequest) returns (StatisticResponse) {}
  rpc AddSpend (Spend) returns (Spend) {}
  rpc EditSpend (Spend) returns (Spend) {}
 // rpc DeleteSpend (DeleteSpendsRequest) returns (google.protobuf.Empty) {}
}

message SpendsRequest {
  string username = 1;
  CurrencyValues currency = 2;
  google.protobuf.Timestamp from = 3;
  google.protobuf.Timestamp to = 4;
}

message SpendsResponse {
  repeated Spend allSpends = 1;
}

message StatisticRequest {
  string username = 1;
  CurrencyValues userCurrency = 2;
  CurrencyValues currency = 3;
  google.protobuf.Timestamp from = 4;
  google.protobuf.Timestamp to = 5;
}

message StatisticResponse {
  repeated Statistic statistics = 1;
}

message DeleteSpendsRequest {
  string username = 1;
  repeated string ids = 2;
}

message Spend {
  string id = 1;
  google.protobuf.Timestamp spendDate = 2;
  string category = 3;
  CurrencyValues currency = 4;
  double amount = 5;
  string description = 6;
  string username = 7;
}

message Statistic {
  google.protobuf.Timestamp dateFrom = 1;
  google.protobuf.Timestamp dateTo = 2;
  CurrencyValues currency = 3;
  double total = 4;
  CurrencyValues userDefaultCurrency = 5;
  double totalInUserDefaultCurrency = 6;
  repeated StatisticByCategory statisticByCategory = 7;
}

message StatisticByCategory {
  string category = 1;
  double total = 2;
  double totalInUserDefaultCurrency = 3;
  repeated Spend spends = 4;
}



